# serializer version: 1
# name: test_cli_error_extra_config
  'Vocab file received.'
# ---
# name: test_cli_error_extra_config.1
  '''
  {"details":"[{\"type\":\"extra_forbidden\",\"loc\":[\"cause-an-error\"],\"msg\":\"Extra inputs are not permitted\",\"input\":true,\"url\":\"https://errors.pydantic.dev/2.13/v/extra_forbidden\"}]","error":"InvalidSessionConfigError","message":"Invalid session config: 1 validation error for SessionConfig\ncause-an-error\n  Extra inputs are not permitted [type=extra_forbidden, input_value=True, input_type=bool]\n    For further information visit https://errors.pydantic.dev/2.13/v/extra_forbidden"}
  
  '''
# ---
# name: test_cli_error_list
  GRPCError(<Status.INVALID_ARGUMENT: 3>, "Invalid part of speech: 'Cause an error' (error on line 1)", None)
# ---
# name: test_cli_error_missing1_config
  'Vocab file received.'
# ---
# name: test_cli_error_missing1_config.1
  '''
  {"details":"[{\"type\":\"missing\",\"loc\":[\"english-verbal-nouns\"],\"msg\":\"Field required\",\"input\":{\"english-subjunctives\":true,\"exclude-adjective-212-declension\":false,\"exclude-adjective-ablative\":false,\"exclude-adjective-accusative\":false,\"exclude-adjective-comparative\":false,\"exclude-adjective-dative\":false,\"exclude-adjective-feminine\":false,\"exclude-adjective-genitive\":false,\"exclude-adjective-masculine\":false,\"exclude-adjective-neuter\":false,\"exclude-adjective-nominative\":false,\"exclude-adjective-plural\":false,\"exclude-adjective-positive\":false,\"exclude-adjective-singular\":false,\"exclude-adjective-superlative\":false,\"exclude-adjective-third-declension\":false,\"exclude-adjective-vocative\":false,\"exclude-adjectives\":false,\"exclude-adverb-comparative\":false,\"exclude-adverb-positive\":false,\"exclude-adverb-superlative\":false,\"exclude-adverbs\":false,\"exclude-deponents\":false,\"exclude-gerundives\":false,\"exclude-gerunds\":false,\"exclude-noun-ablative\":false,\"exclude-noun-accusative\":false,\"exclude-noun-dative\":false,\"exclude-noun-fifth-declension\":false,\"exclude-noun-first-declension\":false,\"exclude-noun-fourth-declension\":false,\"exclude-noun-genitive\":false,\"exclude-noun-irregular-declension\":false,\"exclude-noun-nominative\":false,\"exclude-noun-plural\":false,\"exclude-noun-second-declension\":false,\"exclude-noun-singular\":false,\"exclude-noun-third-declension\":false,\"exclude-noun-vocative\":false,\"exclude-nouns\":false,\"exclude-participle-ablative\":false,\"exclude-participle-accusative\":false,\"exclude-participle-dative\":false,\"exclude-participle-feminine\":false,\"exclude-participle-future-active\":false,\"exclude-participle-genitive\":false,\"exclude-participle-masculine\":false,\"exclude-participle-neuter\":false,\"exclude-participle-nominative\":false,\"exclude-participle-perfect-passive\":false,\"exclude-participle-plural\":false,\"exclude-participle-present-active\":false,\"exclude-participle-singular\":false,\"exclude-participle-vocative\":false,\"exclude-participles\":false,\"exclude-pronoun-ablative\":false,\"exclude-pronoun-accusative\":false,\"exclude-pronoun-dative\":false,\"exclude-pronoun-feminine\":false,\"exclude-pronoun-genitive\":false,\"exclude-pronoun-masculine\":false,\"exclude-pronoun-neuter\":false,\"exclude-pronoun-nominative\":false,\"exclude-pronoun-plural\":false,\"exclude-pronoun-singular\":false,\"exclude-pronoun-vocative\":false,\"exclude-pronouns\":false,\"exclude-regulars\":false,\"exclude-semi-deponents\":false,\"exclude-supines\":false,\"exclude-verb-first-person\":false,\"exclude-verb-second-person\":false,\"exclude-verb-third-person\":false,\"exclude-verb-first-conjugation\":false,\"exclude-verb-fourth-conjugation\":false,\"exclude-verb-future-active-imperative\":false,\"exclude-verb-future-active-indicative\":false,\"exclude-verb-future-active-infinitive\":false,\"exclude-verb-future-passive-imperative\":false,\"exclude-verb-future-passive-indicative\":false,\"exclude-verb-future-passive-infinitive\":false,\"exclude-verb-future-perfect-active-indicative\":false,\"exclude-verb-future-perfect-passive-indicative\":false,\"exclude-verb-imperfect-active-indicative\":false,\"exclude-verb-imperfect-active-subjunctive\":false,\"exclude-verb-imperfect-passive-indicative\":false,\"exclude-verb-irregular-conjugation\":false,\"exclude-verb-mixed-conjugation\":false,\"exclude-verb-perfect-active-indicative\":false,\"exclude-verb-perfect-active-infinitive\":false,\"exclude-verb-perfect-active-subjunctive\":false,\"exclude-verb-perfect-passive-indicative\":false,\"exclude-verb-perfect-passive-infinitive\":false,\"exclude-verb-pluperfect-active-indicative\":false,\"exclude-verb-pluperfect-active-subjunctive\":false,\"exclude-verb-pluperfect-passive-indicative\":false,\"exclude-verb-plural\":false,\"exclude-verb-present-active-imperative\":false,\"exclude-verb-present-active-indicative\":false,\"exclude-verb-present-active-infinitive\":false,\"exclude-verb-present-active-subjunctive\":false,\"exclude-verb-present-passive-imperative\":false,\"exclude-verb-present-passive-indicative\":false,\"exclude-verb-present-passive-infinitive\":false,\"exclude-verb-second-conjugation\":false,\"exclude-verb-singular\":false,\"exclude-verb-third-conjugation\":false,\"exclude-verbs\":false,\"include-inflect\":true,\"include-multiplechoice-engtolat\":true,\"include-multiplechoice-lattoeng\":true,\"include-parse\":true,\"include-principal-parts\":true,\"include-typein-engtolat\":true,\"include-typein-lattoeng\":true,\"number-multiplechoice-options\":3},\"url\":\"https://errors.pydantic.dev/2.13/v/missing\"}]","error":"InvalidSessionConfigError","message":"Invalid session config: 1 validation error for SessionConfig\nenglish-verbal-nouns\n  Field required [type=missing, input_value={'english-subjunctives': ...tiplechoice-options': 3}, input_type=dict]\n    For further information visit https://errors.pydantic.dev/2.13/v/missing"}
  
  '''
# ---
# name: test_cli_error_missing2_config
  'Vocab file received.'
# ---
# name: test_cli_error_missing2_config.1
  '''
  {"details":"[{\"type\":\"missing\",\"loc\":[\"number-multiplechoice-options\"],\"msg\":\"Field required\",\"input\":{\"english-subjunctives\":true,\"english-verbal-nouns\":true,\"exclude-adjective-212-declension\":false,\"exclude-adjective-ablative\":false,\"exclude-adjective-accusative\":false,\"exclude-adjective-comparative\":false,\"exclude-adjective-dative\":false,\"exclude-adjective-feminine\":false,\"exclude-adjective-genitive\":false,\"exclude-adjective-masculine\":false,\"exclude-adjective-neuter\":false,\"exclude-adjective-nominative\":false,\"exclude-adjective-plural\":false,\"exclude-adjective-positive\":false,\"exclude-adjective-singular\":false,\"exclude-adjective-superlative\":false,\"exclude-adjective-third-declension\":false,\"exclude-adjective-vocative\":false,\"exclude-adjectives\":false,\"exclude-adverb-comparative\":false,\"exclude-adverb-positive\":false,\"exclude-adverb-superlative\":false,\"exclude-adverbs\":false,\"exclude-deponents\":false,\"exclude-gerundives\":false,\"exclude-gerunds\":false,\"exclude-noun-ablative\":false,\"exclude-noun-accusative\":false,\"exclude-noun-dative\":false,\"exclude-noun-fifth-declension\":false,\"exclude-noun-first-declension\":false,\"exclude-noun-fourth-declension\":false,\"exclude-noun-genitive\":false,\"exclude-noun-irregular-declension\":false,\"exclude-noun-nominative\":false,\"exclude-noun-plural\":false,\"exclude-noun-second-declension\":false,\"exclude-noun-singular\":false,\"exclude-noun-third-declension\":false,\"exclude-noun-vocative\":false,\"exclude-nouns\":false,\"exclude-participle-ablative\":false,\"exclude-participle-accusative\":false,\"exclude-participle-dative\":false,\"exclude-participle-feminine\":false,\"exclude-participle-future-active\":false,\"exclude-participle-genitive\":false,\"exclude-participle-masculine\":false,\"exclude-participle-neuter\":false,\"exclude-participle-nominative\":false,\"exclude-participle-perfect-passive\":false,\"exclude-participle-plural\":false,\"exclude-participle-present-active\":false,\"exclude-participle-singular\":false,\"exclude-participle-vocative\":false,\"exclude-participles\":false,\"exclude-pronoun-ablative\":false,\"exclude-pronoun-accusative\":false,\"exclude-pronoun-dative\":false,\"exclude-pronoun-feminine\":false,\"exclude-pronoun-genitive\":false,\"exclude-pronoun-masculine\":false,\"exclude-pronoun-neuter\":false,\"exclude-pronoun-nominative\":false,\"exclude-pronoun-plural\":false,\"exclude-pronoun-singular\":false,\"exclude-pronoun-vocative\":false,\"exclude-pronouns\":false,\"exclude-regulars\":false,\"exclude-semi-deponents\":false,\"exclude-supines\":false,\"exclude-verb-first-person\":false,\"exclude-verb-second-person\":false,\"exclude-verb-third-person\":false,\"exclude-verb-first-conjugation\":false,\"exclude-verb-fourth-conjugation\":false,\"exclude-verb-future-active-imperative\":false,\"exclude-verb-future-active-indicative\":false,\"exclude-verb-future-active-infinitive\":false,\"exclude-verb-future-passive-imperative\":false,\"exclude-verb-future-passive-indicative\":false,\"exclude-verb-future-passive-infinitive\":false,\"exclude-verb-future-perfect-active-indicative\":false,\"exclude-verb-future-perfect-passive-indicative\":false,\"exclude-verb-imperfect-active-indicative\":false,\"exclude-verb-imperfect-active-subjunctive\":false,\"exclude-verb-imperfect-passive-indicative\":false,\"exclude-verb-irregular-conjugation\":false,\"exclude-verb-mixed-conjugation\":false,\"exclude-verb-perfect-active-indicative\":false,\"exclude-verb-perfect-active-infinitive\":false,\"exclude-verb-perfect-active-subjunctive\":false,\"exclude-verb-perfect-passive-indicative\":false,\"exclude-verb-perfect-passive-infinitive\":false,\"exclude-verb-pluperfect-active-indicative\":false,\"exclude-verb-pluperfect-active-subjunctive\":false,\"exclude-verb-pluperfect-passive-indicative\":false,\"exclude-verb-plural\":false,\"exclude-verb-present-active-imperative\":false,\"exclude-verb-present-active-indicative\":false,\"exclude-verb-present-active-infinitive\":false,\"exclude-verb-present-active-subjunctive\":false,\"exclude-verb-present-passive-imperative\":false,\"exclude-verb-present-passive-indicative\":false,\"exclude-verb-present-passive-infinitive\":false,\"exclude-verb-second-conjugation\":false,\"exclude-verb-singular\":false,\"exclude-verb-third-conjugation\":false,\"exclude-verbs\":false,\"include-inflect\":true,\"include-multiplechoice-engtolat\":true,\"include-multiplechoice-lattoeng\":true,\"include-parse\":true,\"include-principal-parts\":true,\"include-typein-engtolat\":true,\"include-typein-lattoeng\":true},\"url\":\"https://errors.pydantic.dev/2.13/v/missing\"}]","error":"InvalidSessionConfigError","message":"Invalid session config: 1 validation error for SessionConfig\nnumber-multiplechoice-options\n  Field required [type=missing, input_value={'english-subjunctives': ...-typein-lattoeng': True}, input_type=dict]\n    For further information visit https://errors.pydantic.dev/2.13/v/missing"}
  
  '''
# ---
# name: test_cli_error_numberquestions1_config
  GRPCError(<Status.INVALID_ARGUMENT: 3>, 'number_of_questions must be at least 1', None)
# ---
# name: test_cli_error_numberquestions2_config
  GRPCError(<Status.INVALID_ARGUMENT: 3>, 'number_of_questions must be at least 1', None)
# ---
# name: test_cli_error_type1_config
  'Vocab file received.'
# ---
# name: test_cli_error_type1_config.1
  '''
  {"details":"[{\"type\":\"int_type\",\"loc\":[\"number-multiplechoice-options\"],\"msg\":\"Input should be a valid integer\",\"input\":\"error\",\"url\":\"https://errors.pydantic.dev/2.13/v/int_type\"}]","error":"InvalidSessionConfigError","message":"Invalid session config: 1 validation error for SessionConfig\nnumber-multiplechoice-options\n  Input should be a valid integer [type=int_type, input_value='error', input_type=str]\n    For further information visit https://errors.pydantic.dev/2.13/v/int_type"}
  
  '''
# ---
# name: test_cli_error_type2_config
  'Vocab file received.'
# ---
# name: test_cli_error_type2_config.1
  '''
  {"details":"[{\"type\": \"int_type\", \"loc\": \"number-of-questions\", \"msg\": \"Input should be a valid integer\"}]","error":"InvalidSessionConfigError","message":"Invalid session config: 'number-of-questions' must be an integer."}
  
  '''
# ---
# name: test_cli_normal
  dict({
  })
# ---
# name: test_cli_normal.1
  dict({
  })
# ---
# name: test_cli_normal.2
  list([
    dict({
      'question': dict({
        'parseLatToComp': dict({
          'answers': list([
            dict({
              'case': 'CASE_ACCUSATIVE',
              'mood': 'MOOD_SUPINE',
              'string': 'supine accusative',
            }),
            dict({
              'case': 'CASE_VOCATIVE',
              'gender': 'GENDER_NEUTER',
              'mood': 'MOOD_PARTICIPLE',
              'number': 'NUMBER_SINGULAR',
              'string': 'perfect passive participle neuter vocative singular',
              'tense': 'TENSE_PERFECT',
              'voice': 'VOICE_PASSIVE',
            }),
            dict({
              'case': 'CASE_NOMINATIVE',
              'gender': 'GENDER_NEUTER',
              'mood': 'MOOD_PARTICIPLE',
              'number': 'NUMBER_SINGULAR',
              'string': 'perfect passive participle neuter nominative singular',
              'tense': 'TENSE_PERFECT',
              'voice': 'VOICE_PASSIVE',
            }),
            dict({
              'case': 'CASE_ACCUSATIVE',
              'gender': 'GENDER_NEUTER',
              'mood': 'MOOD_PARTICIPLE',
              'number': 'NUMBER_SINGULAR',
              'string': 'perfect passive participle neuter accusative singular',
              'tense': 'TENSE_PERFECT',
              'voice': 'VOICE_PASSIVE',
            }),
            dict({
              'case': 'CASE_ACCUSATIVE',
              'gender': 'GENDER_MASCULINE',
              'mood': 'MOOD_PARTICIPLE',
              'number': 'NUMBER_SINGULAR',
              'string': 'perfect passive participle masculine accusative singular',
              'tense': 'TENSE_PERFECT',
              'voice': 'VOICE_PASSIVE',
            }),
          ]),
          'dictionaryEntry': 'take: capio, capere, cepi, captus',
          'mainAnswer': dict({
            'case': 'CASE_NOMINATIVE',
            'gender': 'GENDER_NEUTER',
            'mood': 'MOOD_PARTICIPLE',
            'number': 'NUMBER_SINGULAR',
            'string': 'perfect passive participle neuter nominative singular',
            'tense': 'TENSE_PERFECT',
            'voice': 'VOICE_PASSIVE',
          }),
          'prompt': 'captum',
        }),
      }),
    }),
    dict({
      'question': dict({
        'mcEngToLat': dict({
          'answer': 'in',
          'choices': list([
            'in',
            'bonus',
            'agricola',
          ]),
          'prompt': 'into',
        }),
      }),
    }),
    dict({
      'question': dict({
        'mcEngToLat': dict({
          'answer': 'puella',
          'choices': list([
            'hic',
            'puella',
            'ille',
          ]),
          'prompt': 'girl',
        }),
      }),
    }),
    dict({
      'question': dict({
        'typeInEngToLat': dict({
          'answers': list([
            'puero',
          ]),
          'mainAnswer': 'puero',
          'prompt': 'by the boy',
        }),
      }),
    }),
    dict({
      'question': dict({
        'parseLatToComp': dict({
          'answers': list([
            dict({
              'mood': 'MOOD_INDICATIVE',
              'number': 'NUMBER_PLURAL',
              'person': 'PERSON_FIRST',
              'string': 'perfect active indicative plural 1st person',
              'tense': 'TENSE_PERFECT',
              'voice': 'VOICE_ACTIVE',
            }),
          ]),
          'dictionaryEntry': 'take: capio, capere, cepi, captus',
          'mainAnswer': dict({
            'mood': 'MOOD_INDICATIVE',
            'number': 'NUMBER_PLURAL',
            'person': 'PERSON_FIRST',
            'string': 'perfect active indicative plural 1st person',
            'tense': 'TENSE_PERFECT',
            'voice': 'VOICE_ACTIVE',
          }),
          'prompt': 'cepimus',
        }),
      }),
    }),
    dict({
      'question': dict({
        'parseLatToComp': dict({
          'answers': list([
            dict({
              'case': 'CASE_NOMINATIVE',
              'degree': 'DEGREE_COMPARATIVE',
              'gender': 'GENDER_FEMININE',
              'number': 'NUMBER_SINGULAR',
              'string': 'comparative nominative singular feminine',
            }),
            dict({
              'case': 'CASE_NOMINATIVE',
              'degree': 'DEGREE_COMPARATIVE',
              'gender': 'GENDER_MASCULINE',
              'number': 'NUMBER_SINGULAR',
              'string': 'comparative nominative singular masculine',
            }),
            dict({
              'case': 'CASE_VOCATIVE',
              'degree': 'DEGREE_COMPARATIVE',
              'gender': 'GENDER_FEMININE',
              'number': 'NUMBER_SINGULAR',
              'string': 'comparative vocative singular feminine',
            }),
            dict({
              'case': 'CASE_VOCATIVE',
              'degree': 'DEGREE_COMPARATIVE',
              'gender': 'GENDER_MASCULINE',
              'number': 'NUMBER_SINGULAR',
              'string': 'comparative vocative singular masculine',
            }),
          ]),
          'dictionaryEntry': 'light: levis, leve, (3-2)',
          'mainAnswer': dict({
            'case': 'CASE_NOMINATIVE',
            'degree': 'DEGREE_COMPARATIVE',
            'gender': 'GENDER_MASCULINE',
            'number': 'NUMBER_SINGULAR',
            'string': 'comparative nominative singular masculine',
          }),
          'prompt': 'levior',
        }),
      }),
    }),
    dict({
      'question': dict({
        'parseLatToComp': dict({
          'answers': list([
            dict({
              'case': 'CASE_ACCUSATIVE',
              'number': 'NUMBER_SINGULAR',
              'string': 'accusative singular',
            }),
          ]),
          'dictionaryEntry': 'dog: canis, canis, (m)',
          'mainAnswer': dict({
            'case': 'CASE_ACCUSATIVE',
            'number': 'NUMBER_SINGULAR',
            'string': 'accusative singular',
          }),
          'prompt': 'canem',
        }),
      }),
    }),
    dict({
      'question': dict({
        'typeInEngToLat': dict({
          'answers': list([
            'nomine',
          ]),
          'mainAnswer': 'nomine',
          'prompt': 'by the name',
        }),
      }),
    }),
    dict({
      'question': dict({
        'parseLatToComp': dict({
          'answers': list([
            dict({
              'mood': 'MOOD_SUBJUNCTIVE',
              'number': 'NUMBER_SINGULAR',
              'person': 'PERSON_THIRD',
              'string': 'perfect active subjunctive singular 3rd person',
              'tense': 'TENSE_PERFECT',
              'voice': 'VOICE_ACTIVE',
            }),
          ]),
          'dictionaryEntry': 'say: inquam',
          'mainAnswer': dict({
            'mood': 'MOOD_SUBJUNCTIVE',
            'number': 'NUMBER_SINGULAR',
            'person': 'PERSON_THIRD',
            'string': 'perfect active subjunctive singular 3rd person',
            'tense': 'TENSE_PERFECT',
            'voice': 'VOICE_ACTIVE',
          }),
          'prompt': 'inquiat',
        }),
      }),
    }),
    dict({
      'question': dict({
        'parseLatToComp': dict({
          'answers': list([
            dict({
              'case': 'CASE_GENITIVE',
              'number': 'NUMBER_PLURAL',
              'string': 'genitive plural',
            }),
          ]),
          'dictionaryEntry': 'boy: puer, pueri, (m)',
          'mainAnswer': dict({
            'case': 'CASE_GENITIVE',
            'number': 'NUMBER_PLURAL',
            'string': 'genitive plural',
          }),
          'prompt': 'puerorum',
        }),
      }),
    }),
    dict({
      'question': dict({
        'mcEngToLat': dict({
          'answer': 'levis',
          'choices': list([
            'e',
            'audio',
            'levis',
          ]),
          'prompt': 'light',
        }),
      }),
    }),
    dict({
      'question': dict({
        'parseCompToLat': dict({
          'answers': list([
            'agricolas',
          ]),
          'components': dict({
            'case': 'CASE_ACCUSATIVE',
            'number': 'NUMBER_PLURAL',
            'string': 'accusative plural',
          }),
          'mainAnswer': 'agricolas',
          'prompt': 'farmer: agricola, agricolae, (m)',
        }),
      }),
    }),
    dict({
      'question': dict({
        'typeInLatToEng': dict({
          'answers': list([
            'orotund',
            'large',
            'epic',
            'gargantuan',
            'bangy',
            'immense',
            'conspicuous',
            'bear-size',
            'whack',
            'bombastic',
            'largish',
            'macroscopic',
            'extensive',
            'thump',
            'man-size',
            'queen-size',
            'rhetorical',
            'macro',
            'great',
            'humongous',
            'sizable',
            'jumbo',
            'hulking',
            'huge',
            'medium-large',
            'astronomic',
            'mountainous',
            'larger-than-life',
            'magnanimous',
            'hulky',
            'large-mouth',
            'enceinte',
            'rangy',
            'bouff',
            'bulky',
            'big',
            'titanic',
            'full-size',
            'pregnant',
            'tremendous',
            'oversized',
            'whoppy',
            'with ch',
            'outsized',
            'prodigious',
            'mammoth',
            'brobdingnagian',
            'super',
            'overlarge',
            'expectant',
            'capacious',
            'turgid',
            'large-scale',
            'voluminous',
            'plump',
            'generous',
            'lifesize',
            'monstrous',
            'declamatory',
            'too large',
            'significant',
            'spacious',
            'double',
            'vast',
            'volume',
            'wallopy',
            'oversize',
            'tumid',
            'puffy',
            'enlary',
            'heroic',
            'gigantic',
            'massive',
            'enormous',
            'comprehensive',
            'astronomical',
            'biggish',
            'elephantine',
            'galactic',
            'blown-up',
            'life-size',
            'wide',
            'cosmic',
            'prominent',
            'ample',
            'life-sy',
            'wide-rangy',
            'stupendous',
            'heavy',
            'giant',
            'deep',
            'sizeable',
            'colossal',
            'grand',
            'gravid',
            'important',
            'monumental',
            'king-size',
            'broad',
            'macroscopical',
            'monolithic',
            'outsize',
            'extended',
          ]),
          'mainAnswer': 'large',
          'prompt': 'ingentia',
        }),
      }),
    }),
    dict({
      'question': dict({
        'parseLatToComp': dict({
          'answers': list([
            dict({
              'case': 'CASE_NOMINATIVE',
              'gender': 'GENDER_MASCULINE',
              'number': 'NUMBER_PLURAL',
              'string': 'nominative plural masculine',
            }),
            dict({
              'case': 'CASE_DATIVE',
              'gender': 'GENDER_FEMININE',
              'number': 'NUMBER_SINGULAR',
              'string': 'dative singular feminine',
            }),
            dict({
              'case': 'CASE_DATIVE',
              'gender': 'GENDER_MASCULINE',
              'number': 'NUMBER_SINGULAR',
              'string': 'dative singular masculine',
            }),
            dict({
              'case': 'CASE_DATIVE',
              'gender': 'GENDER_NEUTER',
              'number': 'NUMBER_SINGULAR',
              'string': 'dative singular neuter',
            }),
          ]),
          'dictionaryEntry': 'that: ille, illa, illud',
          'mainAnswer': dict({
            'case': 'CASE_NOMINATIVE',
            'gender': 'GENDER_MASCULINE',
            'number': 'NUMBER_PLURAL',
            'string': 'nominative plural masculine',
          }),
          'prompt': 'illi',
        }),
      }),
    }),
    dict({
      'question': dict({
        'mcEngToLat': dict({
          'answer': 'laetus',
          'choices': list([
            'e',
            'laetus',
            'ego',
          ]),
          'prompt': 'happy',
        }),
      }),
    }),
    dict({
      'question': dict({
        'parseLatToComp': dict({
          'answers': list([
            dict({
              'case': 'CASE_NOMINATIVE',
              'number': 'NUMBER_PLURAL',
              'string': 'nominative plural',
            }),
            dict({
              'case': 'CASE_GENITIVE',
              'number': 'NUMBER_SINGULAR',
              'string': 'genitive singular',
            }),
            dict({
              'case': 'CASE_VOCATIVE',
              'number': 'NUMBER_PLURAL',
              'string': 'vocative plural',
            }),
          ]),
          'dictionaryEntry': 'boy: puer, pueri, (m)',
          'mainAnswer': dict({
            'case': 'CASE_NOMINATIVE',
            'number': 'NUMBER_PLURAL',
            'string': 'nominative plural',
          }),
          'prompt': 'pueri',
        }),
      }),
    }),
    dict({
      'question': dict({
        'mcEngToLat': dict({
          'answer': 'capio',
          'choices': list([
            'hic',
            'capio',
            'ego',
          ]),
          'prompt': 'I take',
        }),
      }),
    }),
    dict({
      'question': dict({
        'typeInLatToEng': dict({
          'answers': list([
            'of that',
          ]),
          'mainAnswer': 'of that',
          'prompt': 'illius',
        }),
      }),
    }),
    dict({
      'question': dict({
        'principalParts': dict({
          'principalParts': list([
            'levis',
            'leve',
          ]),
          'prompt': 'levis',
        }),
      }),
    }),
    dict({
      'question': dict({
        'principalParts': dict({
          'principalParts': list([
            'ingens',
            'ingentis',
          ]),
          'prompt': 'ingens',
        }),
      }),
    }),
    dict({
      'question': dict({
        'mcEngToLat': dict({
          'answer': 'inquam',
          'choices': list([
            'ingredior',
            'laetus',
            'inquam',
          ]),
          'prompt': 'I say',
        }),
      }),
    }),
    dict({
      'question': dict({
        'parseLatToComp': dict({
          'answers': list([
            dict({
              'case': 'CASE_ABLATIVE',
              'degree': 'DEGREE_COMPARATIVE',
              'gender': 'GENDER_FEMININE',
              'number': 'NUMBER_SINGULAR',
              'string': 'comparative ablative singular feminine',
            }),
            dict({
              'case': 'CASE_ABLATIVE',
              'degree': 'DEGREE_COMPARATIVE',
              'gender': 'GENDER_MASCULINE',
              'number': 'NUMBER_SINGULAR',
              'string': 'comparative ablative singular masculine',
            }),
            dict({
              'case': 'CASE_ABLATIVE',
              'degree': 'DEGREE_COMPARATIVE',
              'gender': 'GENDER_NEUTER',
              'number': 'NUMBER_SINGULAR',
              'string': 'comparative ablative singular neuter',
            }),
          ]),
          'dictionaryEntry': 'large: ingens, ingentis, (3-1)',
          'mainAnswer': dict({
            'case': 'CASE_ABLATIVE',
            'degree': 'DEGREE_COMPARATIVE',
            'gender': 'GENDER_MASCULINE',
            'number': 'NUMBER_SINGULAR',
            'string': 'comparative ablative singular masculine',
          }),
          'prompt': 'ingentiore',
        }),
      }),
    }),
    dict({
      'question': dict({
        'mcLatToEng': dict({
          'answer': 'good',
          'choices': list([
            'good',
            'I say',
            'dog',
          ]),
          'prompt': 'bonus',
        }),
      }),
    }),
    dict({
      'question': dict({
        'mcLatToEng': dict({
          'answer': 'name',
          'choices': list([
            'name',
            'from',
            'girl',
          ]),
          'prompt': 'nomen',
        }),
      }),
    }),
    dict({
      'question': dict({
        'mcEngToLat': dict({
          'answer': 'puer',
          'choices': list([
            'puer',
            'capio',
            'in',
          ]),
          'prompt': 'boy',
        }),
      }),
    }),
    dict({
      'question': dict({
        'mcEngToLat': dict({
          'answer': 'puer',
          'choices': list([
            'laetus',
            'puer',
            'nomen',
          ]),
          'prompt': 'boy',
        }),
      }),
    }),
    dict({
      'question': dict({
        'typeInLatToEng': dict({
          'answers': list([
            'unstresser',
            'more scant',
            'more light-duty',
            'insufficienter',
            'autofluorescenter',
            'sunlitter',
            'more light-foot',
            'more palish',
            'unimportanter',
            'more floaty',
            'light-coloreder',
            'more low-density',
            'easier',
            'sicker',
            'fat-freeer',
            'more luminescent',
            'more clear',
            'casualer',
            'pasteller',
            'more unstress',
            'iller',
            'floodlighter',
            'scanter',
            'more unimportant',
            'more gentle',
            'lightly-armer',
            'livider',
            'fainter',
            'more fat-free',
            'more pastel',
            'more idle',
            'lampliter',
            'light-headeder',
            'more flood',
            'more phosphorescent',
            'flooder',
            'palisher',
            'more fatle',
            'incandescenter',
            'more light-arm',
            'purer',
            'inflameder',
            'more redden',
            'bioluminescenter',
            'more calorie-free',
            'cander',
            'more lightheaded',
            'more thin',
            'more ablaze',
            'digestibler',
            'more light-headed',
            'more faint',
            'more abstemious',
            'more lite',
            'undemandinger',
            'floatier',
            'more cand',
            'lighting-uper',
            'more casual',
            'insignificanter',
            'unclouder',
            'more pure',
            'candescenter',
            'more digestible',
            'more fluorescent',
            'low-caler',
            'more bioluminescent',
            'more short',
            'phosphorescenter',
            'more clean',
            'more uncloud',
            'fatler',
            'more sunny',
            'more weak',
            'more unchaste',
            'lightsomer',
            'nonfatter',
            'fluorescenter',
            'more frivolous',
            'more loose',
            'illuminateder',
            'more autofluorescent',
            'more promiscuous',
            'cleaner',
            'more lamplit',
            'unaccenteder',
            'deficienter',
            'brighter',
            'more lightly-arm',
            'clearer',
            'more lighter-than-air',
            'idler',
            'calorie-freeer',
            'promiscuouser',
            'more sluttish',
            'more buoyant',
            'more candescent',
            'more illuminated',
            'worse',
            'more livid',
            'unchaster',
            'lightweighter',
            'low-densitier',
            'more floodlight',
            'more low-cal',
            'buoyanter',
            'powderier',
            'more inflamed',
            'trippier',
            'swooner',
            'more lightsome',
            'more white',
            'more unaccented',
            'more shallow',
            'lightheadeder',
            'looser',
            'sunnier',
            'more wanton',
            'more undemanding',
            'liter',
            'more well-light',
            'sluttisher',
            'lighter-than-airer',
            'more insignificant',
            'light-footer',
            'more lightweight',
            'more easy',
            'more nonfat',
            'wakefuler',
            'litter',
            'more soft',
            'light-dutier',
            'more light',
            'thinner',
            'more wakeful',
            'more incandescent',
            'more insufficient',
            'airier',
            'light-armer',
            'paler',
            'more temperate',
            'reddener',
            'lighter',
            'more lit',
            'shorter',
            'temperater',
            'shallower',
            'more swoon',
            'more light-colored',
            'more bright',
            'more deficient',
            'more sick',
            'more lighting-up',
            'more powdery',
            'whiter',
            'gentler',
            'more pale',
            'more airy',
            'sunstrucker',
            'abstemiouser',
            'more sunlit',
            'wantoner',
            'more trippy',
            'frivolouser',
            'softer',
            'more fool',
            'more ill',
            'fooler',
            'more sunstruck',
            'ablazer',
            'well-lighter',
            'luminescenter',
            'weaker',
          ]),
          'mainAnswer': 'lighter',
          'prompt': 'levioris',
        }),
      }),
    }),
    dict({
      'question': dict({
        'parseCompToLat': dict({
          'answers': list([
            'has',
          ]),
          'components': dict({
            'case': 'CASE_ACCUSATIVE',
            'gender': 'GENDER_FEMININE',
            'number': 'NUMBER_PLURAL',
            'string': 'accusative plural feminine',
          }),
          'mainAnswer': 'has',
          'prompt': 'this: hic, haec, hoc',
        }),
      }),
    }),
    dict({
      'question': dict({
        'principalParts': dict({
          'principalParts': list([
            'laetus',
            'laeta',
            'laetum',
          ]),
          'prompt': 'laetus',
        }),
      }),
    }),
    dict({
      'question': dict({
        'mcEngToLat': dict({
          'answer': 'laetus',
          'choices': list([
            'laetus',
            'puella',
            'hic',
          ]),
          'prompt': 'happy',
        }),
      }),
    }),
    dict({
      'question': dict({
        'mcLatToEng': dict({
          'answer': 'light',
          'choices': list([
            'into',
            'light',
            'good',
          ]),
          'prompt': 'levis',
        }),
      }),
    }),
    dict({
      'question': dict({
        'parseLatToComp': dict({
          'answers': list([
            dict({
              'case': 'CASE_NOMINATIVE',
              'gender': 'GENDER_MASCULINE',
              'number': 'NUMBER_PLURAL',
              'string': 'nominative plural masculine',
            }),
            dict({
              'case': 'CASE_DATIVE',
              'gender': 'GENDER_FEMININE',
              'number': 'NUMBER_SINGULAR',
              'string': 'dative singular feminine',
            }),
            dict({
              'case': 'CASE_DATIVE',
              'gender': 'GENDER_MASCULINE',
              'number': 'NUMBER_SINGULAR',
              'string': 'dative singular masculine',
            }),
            dict({
              'case': 'CASE_DATIVE',
              'gender': 'GENDER_NEUTER',
              'number': 'NUMBER_SINGULAR',
              'string': 'dative singular neuter',
            }),
          ]),
          'dictionaryEntry': 'that: ille, illa, illud',
          'mainAnswer': dict({
            'case': 'CASE_NOMINATIVE',
            'gender': 'GENDER_MASCULINE',
            'number': 'NUMBER_PLURAL',
            'string': 'nominative plural masculine',
          }),
          'prompt': 'illi',
        }),
      }),
    }),
    dict({
      'question': dict({
        'typeInLatToEng': dict({
          'answers': list([
            'smash',
            'cracky',
            'stabby',
            'cutty',
            'discriminating',
            'slap-up',
            'bang-up',
            'cork',
            'neat',
            'knifelike',
            'not bad',
            'nifty',
            'acute',
            'dandy',
            'good',
            'perceptive',
            'keen',
            'peachy',
            'incisive',
            'exquisite',
            'penetrative',
            'piercing',
            'old',
            'great',
            'groovy',
            'intense',
            'lancinate',
            'swell',
            'bully',
            'penetraty',
            'sharp',
          ]),
          'mainAnswer': 'keen',
          'prompt': 'acri',
        }),
      }),
    }),
    dict({
      'question': dict({
        'principalParts': dict({
          'principalParts': list([
            'bonus',
            'bona',
            'bonum',
          ]),
          'prompt': 'bonus',
        }),
      }),
    }),
    dict({
      'question': dict({
        'mcEngToLat': dict({
          'answer': 'conor',
          'choices': list([
            'levis',
            'ingredior',
            'conor',
          ]),
          'prompt': 'I try',
        }),
      }),
    }),
    dict({
      'question': dict({
        'mcLatToEng': dict({
          'answer': 'happy',
          'choices': list([
            'happy',
            'good',
            'keen',
          ]),
          'prompt': 'laetus',
        }),
      }),
    }),
    dict({
      'question': dict({
        'parseLatToComp': dict({
          'answers': list([
            dict({
              'case': 'CASE_ACCUSATIVE',
              'degree': 'DEGREE_COMPARATIVE',
              'gender': 'GENDER_FEMININE',
              'number': 'NUMBER_PLURAL',
              'string': 'comparative accusative plural feminine',
            }),
            dict({
              'case': 'CASE_NOMINATIVE',
              'degree': 'DEGREE_COMPARATIVE',
              'gender': 'GENDER_MASCULINE',
              'number': 'NUMBER_PLURAL',
              'string': 'comparative nominative plural masculine',
            }),
            dict({
              'case': 'CASE_VOCATIVE',
              'degree': 'DEGREE_COMPARATIVE',
              'gender': 'GENDER_FEMININE',
              'number': 'NUMBER_PLURAL',
              'string': 'comparative vocative plural feminine',
            }),
            dict({
              'case': 'CASE_ACCUSATIVE',
              'degree': 'DEGREE_COMPARATIVE',
              'gender': 'GENDER_MASCULINE',
              'number': 'NUMBER_PLURAL',
              'string': 'comparative accusative plural masculine',
            }),
            dict({
              'case': 'CASE_VOCATIVE',
              'degree': 'DEGREE_COMPARATIVE',
              'gender': 'GENDER_MASCULINE',
              'number': 'NUMBER_PLURAL',
              'string': 'comparative vocative plural masculine',
            }),
            dict({
              'case': 'CASE_NOMINATIVE',
              'degree': 'DEGREE_COMPARATIVE',
              'gender': 'GENDER_FEMININE',
              'number': 'NUMBER_PLURAL',
              'string': 'comparative nominative plural feminine',
            }),
          ]),
          'dictionaryEntry': 'good: bonus, bona, bonum, (2-1-2)',
          'mainAnswer': dict({
            'case': 'CASE_NOMINATIVE',
            'degree': 'DEGREE_COMPARATIVE',
            'gender': 'GENDER_MASCULINE',
            'number': 'NUMBER_PLURAL',
            'string': 'comparative nominative plural masculine',
          }),
          'prompt': 'meliores',
        }),
      }),
    }),
    dict({
      'question': dict({
        'principalParts': dict({
          'principalParts': list([
            'hic',
            'haec',
            'hoc',
          ]),
          'prompt': 'hic',
        }),
      }),
    }),
    dict({
      'question': dict({
        'typeInEngToLat': dict({
          'answers': list([
            'inquimus',
          ]),
          'mainAnswer': 'inquimus',
          'prompt': 'we say',
        }),
      }),
    }),
    dict({
      'question': dict({
        'typeInEngToLat': dict({
          'answers': list([
            'capio',
          ]),
          'mainAnswer': 'capio',
          'prompt': 'I take',
        }),
      }),
    }),
    dict({
      'question': dict({
        'mcEngToLat': dict({
          'answer': 'laetus',
          'choices': list([
            'nomen',
            'laetus',
            'ingredior',
          ]),
          'prompt': 'happy',
        }),
      }),
    }),
    dict({
      'question': dict({
        'mcEngToLat': dict({
          'answer': 'nomen',
          'choices': list([
            'in',
            'capio',
            'nomen',
          ]),
          'prompt': 'name',
        }),
      }),
    }),
    dict({
      'question': dict({
        'typeInEngToLat': dict({
          'answers': list([
            'puellas',
            'puellae',
          ]),
          'mainAnswer': 'puellae',
          'prompt': 'girls',
        }),
      }),
    }),
    dict({
      'question': dict({
        'parseCompToLat': dict({
          'answers': list([
            'inquii',
          ]),
          'components': dict({
            'mood': 'MOOD_INDICATIVE',
            'number': 'NUMBER_SINGULAR',
            'person': 'PERSON_FIRST',
            'string': 'perfect active indicative singular 1st person',
            'tense': 'TENSE_PERFECT',
            'voice': 'VOICE_ACTIVE',
          }),
          'mainAnswer': 'inquii',
          'prompt': 'say: inquam',
        }),
      }),
    }),
    dict({
      'question': dict({
        'typeInLatToEng': dict({
          'answers': list([
            'redden',
            'casual',
            'bright',
            'short',
            'lightheaded',
            'airy',
            'scant',
            'sunlit',
            'deficient',
            'insignificant',
            'low-density',
            'floaty',
            'lite',
            'lightly-arm',
            'swoon',
            'weak',
            'white',
            'light-foot',
            'lighting-up',
            'easy',
            'low-cal',
            'gentle',
            'floodlight',
            'loose',
            'inflamed',
            'wanton',
            'pale',
            'lighter-than-air',
            'sluttish',
            'unchaste',
            'powdery',
            'unimportant',
            'incandescent',
            'fluorescent',
            'lit',
            'sunstruck',
            'pastel',
            'frivolous',
            'light-duty',
            'livid',
            'shallow',
            'luminescent',
            'thin',
            'soft',
            'calorie-free',
            'clear',
            'ill',
            'uncloud',
            'unaccented',
            'bioluminescent',
            'candescent',
            'palish',
            'ablaze',
            'idle',
            'undemanding',
            'light',
            'flood',
            'cand',
            'light-headed',
            'light-colored',
            'wakeful',
            'lightweight',
            'phosphorescent',
            'faint',
            'buoyant',
            'fat-free',
            'promiscuous',
            'trippy',
            'pure',
            'illuminated',
            'clean',
            'well-light',
            'sunny',
            'lightsome',
            'nonfat',
            'fool',
            'digestible',
            'autofluorescent',
            'temperate',
            'insufficient',
            'light-arm',
            'abstemious',
            'sick',
            'unstress',
            'fatle',
            'lamplit',
          ]),
          'mainAnswer': 'light',
          'prompt': 'leve',
        }),
      }),
    }),
    dict({
      'question': dict({
        'mcEngToLat': dict({
          'answer': 'puella',
          'choices': list([
            'puer',
            'puella',
            'e',
          ]),
          'prompt': 'girl',
        }),
      }),
    }),
    dict({
      'question': dict({
        'typeInEngToLat': dict({
          'answers': list([
            'ingressuro',
            'ingressurae',
            'ingressam',
            'ingrediendas',
            'ingressis',
            'ingressas',
            'ingredientium',
            'ingressurarum',
            'ingressos',
            'ingressuri',
            'ingrediendi',
            'ingressus',
            'ingrediendorum',
            'ingrediendae',
            'ingressuris',
            'ingredientem',
            'ingrediendam',
            'ingrediendarum',
            'ingredientia',
            'ingressae',
            'ingressurorum',
            'ingrediendos',
            'ingrediendus',
            'ingressum',
            'ingressuras',
            'ingredientis',
            'ingressi',
            'ingresse',
            'ingressarum',
            'ingredientes',
            'ingrediendum',
            'ingrediendo',
            'ingressurus',
            'ingrediens',
            'ingressure',
            'ingrediendis',
            'ingredientibus',
            'ingrediente',
            'ingressura',
            'ingressa',
            'ingressuram',
            'ingressorum',
            'ingresso',
            'ingressuros',
            'ingressurum',
            'ingrediende',
            'ingredienti',
            'ingredienda',
          ]),
          'mainAnswer': 'ingrediens',
          'prompt': 'entering',
        }),
      }),
    }),
    dict({
      'question': dict({
        'typeInLatToEng': dict({
          'answers': list([
            'too expert',
            'very redeemy',
            'extremely skilful',
            'very ample',
            'swellest',
            'too nice',
            'too instagood',
            'quite good enough',
            'most well-behave',
            'very serious',
            'too adept',
            'rather honorable',
            'most healthy',
            'too redeemy',
            'quite safe',
            'rather bang-up',
            'rather respectable',
            'most solid',
            'instagoodest',
            'dandiest',
            'very hot',
            'very skillful',
            'rather beatific',
            'most honorable',
            'quite near',
            'rather bully',
            'quite bully',
            'too proficient',
            'quite unspoilt',
            'nicest',
            'quite complete',
            'most good enough',
            'most beatific',
            'extremely bang-up',
            'rather practice',
            'quite hot',
            'well-behavest',
            'very superb',
            'quite proficient',
            'too favourable',
            'justest',
            'rather opportune',
            'too cracky',
            'very solid',
            'rather slap-up',
            'extremely satisfactory',
            'quite operative',
            'rather peachy',
            'most old',
            'very intellectual',
            'quite righteous',
            'extremely pleasing',
            'very nifty',
            'very advantageous',
            'too satisfactory',
            'quite expert',
            'rather skilled',
            'extremely saint',
            'too white',
            'extremely cracky',
            'very complete',
            'quite fresh',
            'quite ripe',
            'too skillful',
            'most proficient',
            'most practice',
            'quite ample',
            'rather honest',
            'most peachy',
            'nearest',
            'too nifty',
            'quite healthful',
            'most operative',
            'rather adept',
            'soundest',
            'rather serious',
            'most well behave',
            'extremely skilled',
            'quite nifty',
            'extremely solid',
            'very decent',
            'very salutary',
            'very unspoilt',
            'very old',
            'rather goody-goody',
            'extremely advantageous',
            'quite angelic',
            'very bang-up',
            'rather righteous',
            'too bang-up',
            'very white',
            'very instagood',
            'unspoiltest',
            'extremely saintlike',
            'very well behave',
            'rather beneficial',
            'quite reputable',
            'most saintly',
            'effectivest',
            'quite adept',
            'extremely salutary',
            'too reputable',
            'rather reputable',
            'very ripe',
            'quite advantageous',
            'extremely ripe',
            'rather admirable',
            'rather complete',
            'rather upright',
            'extremely bully',
            'quite right',
            'too well behave',
            'fullest',
            'most superb',
            'peachiest',
            'saintlikest',
            'too in force',
            'most sound',
            'most ripe',
            'quite beatific',
            'too solid',
            'very good',
            'very neat',
            'most close',
            'quite smash',
            'quite sound',
            'rather well',
            'most instagood',
            'most neat',
            'acceptablest',
            'rather just',
            'redeemiest',
            'rather safe',
            'favorablest',
            'admirablest',
            'most dandy',
            'rather well behave',
            'too not bad',
            'very bully',
            'favourablest',
            'too bully',
            'most favourable',
            'most unspoiled',
            'most satisfactory',
            'most green',
            'most bang-up',
            'rather saintly',
            'extremely save',
            'very in eff',
            'rather near',
            'most swell',
            'bang-uppest',
            'eldest',
            'most cracky',
            'completest',
            'quite goodish',
            'very sound',
            'most cork',
            'very smash',
            'securest',
            'extremely good enough',
            'too smash',
            'extremely sound',
            'most healthful',
            'neatest',
            'extremely respectable',
            'rather favourable',
            'very in force',
            'too skilled',
            'rather salutary',
            'very unspoiled',
            'extremely adept',
            'practicest',
            'very well',
            'most saintlike',
            'hottest',
            'too genuine',
            'very goodish',
            'quite redemptive',
            'extremely well behave',
            'grooviest',
            'extremely nice',
            'good enoughest',
            'quite healthy',
            'too good enough',
            'most honest',
            'extremely full',
            'saintliest',
            'extremely well-behave',
            'most full',
            'extremely keen',
            'rather ecofriendly',
            'extremely practice',
            'very respectable',
            'extremely slap-up',
            'rather not bad',
            'quite in force',
            'most unspoilt',
            'extremely reputable',
            'most echt',
            'very great',
            'bulliest',
            'rather unspoiled',
            'quite peachy',
            'too advantageous',
            'angelicalest',
            'rather skillful',
            'most serious',
            'quite beneficial',
            'most just',
            'too serious',
            'rather pleasing',
            'rather discriminating',
            'skilledest',
            'quite angelical',
            'rather swell',
            'smashest',
            'most beneficial',
            'slap-upest',
            'honestest',
            'quite discriminating',
            'rather white',
            'extremely healthful',
            'fortunatest',
            'very estimable',
            'extremely well',
            'very skilled',
            'most discriminating',
            'most good',
            'most not bad',
            'dearest',
            'extremely effective',
            'extremely goody-goody',
            'most hot',
            'most skillful',
            'quite genuine',
            'rather good enough',
            'rather favorable',
            'too fortunate',
            'too angelic',
            'quite saintly',
            'quite favorable',
            'extremely peachy',
            'quite saintlike',
            'most salutary',
            'too healthy',
            'rather redeemy',
            'quite saint',
            'discriminatingest',
            'rather effective',
            'extremely saintly',
            'rather echt',
            'very satisfactory',
            'quite skilful',
            'estimablest',
            'extremely opportune',
            'too favorable',
            'extremely righteous',
            'very close',
            'too skilful',
            'extremely secure',
            'in forcest',
            'too complete',
            'extremely fresh',
            'very goody-goody',
            'quite unspoiled',
            'too honorable',
            'very admirable',
            'most secure',
            'too peachy',
            'quite full',
            'extremely operative',
            'too upright',
            'opportunest',
            'very favorable',
            'extremely genuine',
            'extremely ample',
            'too secure',
            'extremely fortunate',
            'quite old',
            'in effest',
            'quite salutary',
            'extremely beatific',
            'extremely unspoilt',
            'most ample',
            'very swell',
            'quite honorable',
            'extremely hot',
            'skilfulest',
            'rightest',
            'intellectualest',
            'quite favourable',
            'most pleasing',
            'rather good',
            'very well-behave',
            'extremely dependable',
            'too operative',
            'very not bad',
            'respectablest',
            'very dandy',
            'too discriminating',
            'too in eff',
            'too great',
            'advantageousest',
            'extremely acceptable',
            'very effective',
            'most nice',
            'rather decent',
            'well behavest',
            'genuinest',
            'pleasingest',
            'rather genuine',
            'too cork',
            'rather operative',
            'very secure',
            'very full',
            'very ecofriendly',
            'too sound',
            'most in force',
            'too practice',
            'redemptivest',
            'very pleasing',
            'adeptest',
            'extremely safe',
            'quite nice',
            'extremely echt',
            'quite just',
            'quite instagood',
            'quite fortunate',
            'quite good',
            'most angelic',
            'most complete',
            'rather save',
            'very operative',
            'very reputable',
            'too righteous',
            'extremely not bad',
            'rather fresh',
            'extremely in eff',
            'too green',
            'very genuine',
            'skillfulest',
            'too unspoiled',
            'freshest',
            'very healthful',
            'rather right',
            'unspoiledest',
            'most genuine',
            'uprightest',
            'rather nifty',
            'rather healthy',
            'rather close',
            'extremely cork',
            'most fortunate',
            'quite effective',
            'extremely proficient',
            'rather intellectual',
            'oldest',
            'quite well',
            'most reputable',
            'healthfulest',
            'niftiest',
            'extremely right',
            'too well-behave',
            'too swell',
            'most opportune',
            'very just',
            'very cork',
            'most slap-up',
            'too saintlike',
            'most advantageous',
            'rather angelical',
            'extremely unspoiled',
            'quite neat',
            'extremely swell',
            'extremely great',
            'quite respectable',
            'best',
            'very saint',
            'too full',
            'extremely beneficial',
            'rather satisfactory',
            'very keen',
            'most effective',
            'too beatific',
            'quite decent',
            'quite practice',
            'quite secure',
            'extremely just',
            'operativest',
            'most right',
            'extremely superb',
            'quite save',
            'most fresh',
            'too pleasing',
            'too neat',
            'extremely groovy',
            'too good',
            'too opportune',
            'too respectable',
            'most acceptable',
            'rather full',
            'too superb',
            'most respectable',
            'rather goodish',
            'extremely skillful',
            'rather great',
            'amplest',
            'most safe',
            'decentest',
            'whitest',
            'too beneficial',
            'quite great',
            'most skilful',
            'most smash',
            'rather cork',
            'rather acceptable',
            'rather unspoilt',
            'very proficient',
            'rather ample',
            'quite swell',
            'not baddest',
            'reputablest',
            'too just',
            'solidest',
            'too saint',
            'very expert',
            'extremely healthy',
            'too healthful',
            'goody-goodiest',
            'rather hot',
            'quite skilled',
            'rather green',
            'extremely discriminating',
            'very dependable',
            'extremely admirable',
            'quite skillful',
            'rather superb',
            'very angelic',
            'most save',
            'quite groovy',
            'goodishest',
            'too acceptable',
            'quite bang-up',
            'greatest',
            'most saint',
            'quite keen',
            'quite satisfactory',
            'rather estimable',
            'most adept',
            'quite upright',
            'rather groovy',
            'too goody-goody',
            'echtest',
            'very opportune',
            'very honorable',
            'rather proficient',
            'dependablest',
            'ripest',
            'most bully',
            'most skilled',
            'rather in eff',
            'very acceptable',
            'most expert',
            'too old',
            'extremely complete',
            'extremely angelical',
            'quite dandy',
            'rather ripe',
            'very beneficial',
            'quite estimable',
            'most dear',
            'very practice',
            'very green',
            'very peachy',
            'very echt',
            'too intellectual',
            'extremely ecofriendly',
            'very cracky',
            'rather secure',
            'rather sound',
            'rather well-behave',
            'safest',
            'closest',
            'very fortunate',
            'most goodish',
            'extremely dear',
            'very dear',
            'healthiest',
            'extremely redemptive',
            'beneficialest',
            'very favourable',
            'most admirable',
            'rather saint',
            'very beatific',
            'extremely upright',
            'quite redeemy',
            'extremely dandy',
            'too ample',
            'most righteous',
            'rather fortunate',
            'rather old',
            'honorablest',
            'quite ecofriendly',
            'very redemptive',
            'too slap-up',
            'quite well-behave',
            'quite cork',
            'rather saintlike',
            'rather instagood',
            'too goodish',
            'extremely near',
            'very upright',
            'keenest',
            'extremely green',
            'rather smash',
            'most dependable',
            'most redemptive',
            'too angelical',
            'too close',
            'too ecofriendly',
            'very safe',
            'quite not bad',
            'too well',
            'extremely redeemy',
            'most groovy',
            'rather nice',
            'beatificest',
            'most white',
            'most angelical',
            'rather neat',
            'quite echt',
            'rather angelic',
            'extremely white',
            'extremely angelic',
            'extremely neat',
            'very save',
            'quite opportune',
            'too dependable',
            'very discriminating',
            'quite white',
            'very nice',
            'too near',
            'very righteous',
            'most decent',
            'extremely instagood',
            'most in eff',
            'extremely old',
            'rather dear',
            'most upright',
            'too decent',
            'very saintlike',
            'quite intellectual',
            'quite dependable',
            'extremely good',
            'extremely close',
            'expertest',
            'quite solid',
            'most estimable',
            'too honest',
            'too groovy',
            'extremely goodish',
            'extremely smash',
            'extremely in force',
            'extremely nifty',
            'too estimable',
            'quite acceptable',
            'quite in eff',
            'rather healthful',
            'most favorable',
            'too unspoilt',
            'too keen',
            'very adept',
            'quite admirable',
            'too fresh',
            'too ripe',
            'very groovy',
            'rather cracky',
            'too save',
            'quite honest',
            'too hot',
            'too dear',
            'quite cracky',
            'very right',
            'most intellectual',
            'quite dear',
            'righteousest',
            'extremely estimable',
            'most nifty',
            'quite close',
            'rather expert',
            'satisfactoriest',
            'most ecofriendly',
            'most well',
            'very angelical',
            'quite green',
            'salutariest',
            'extremely favourable',
            'greenest',
            'extremely intellectual',
            'crackiest',
            'too redemptive',
            'too effective',
            'rather skilful',
            'too admirable',
            'rather solid',
            'very skilful',
            'proficientest',
            'too safe',
            'very near',
            'angelicest',
            'superbest',
            'too salutary',
            'rather keen',
            'very good enough',
            'too right',
            'extremely serious',
            'rather dependable',
            'most keen',
            'quite superb',
            'too dandy',
            'rather dandy',
            'quite goody-goody',
            'too echt',
            'ecofriendliest',
            'rather advantageous',
            'too saintly',
            'extremely honest',
            'corkest',
            'saintest',
            'quite well behave',
            'rather redemptive',
            'extremely favorable',
            'most near',
            'quite serious',
            'very saintly',
            'savest',
            'most great',
            'very slap-up',
            'most goody-goody',
            'extremely expert',
            'seriousest',
            'most redeemy',
            'extremely honorable',
            'very healthy',
            'very honest',
            'extremely decent',
            'very fresh',
            'quite pleasing',
            'quite slap-up',
            'rather in force',
          ]),
          'mainAnswer': 'best',
          'prompt': 'optimis',
        }),
      }),
    }),
    dict({
      'question': dict({
        'typeInEngToLat': dict({
          'answers': list([
            'optimo',
            'optimis',
            'optimos',
            'optimi',
            'optimam',
            'optimus',
            'optimum',
            'optimas',
            'optimorum',
            'optima',
            'optimarum',
            'optime',
            'optimae',
          ]),
          'mainAnswer': 'optimus',
          'prompt': 'best',
        }),
      }),
    }),
    dict({
      'question': dict({
        'mcLatToEng': dict({
          'answer': 'that',
          'choices': list([
            'large',
            'dog',
            'that',
          ]),
          'prompt': 'ille',
        }),
      }),
    }),
  ])
# ---
